[gd_scene load_steps=4 format=3 uid="uid://c0x8egs2i5adr"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_b4nc7"]
[ext_resource type="Texture2D" uid="uid://dh4i4p4f56jib" path="res://graphics/player/player.png" id="1_nemsr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y6k21"]
radius = 64.4981

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_b4nc7")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(2, -35)
rotation = 1.65806
texture = ExtResource("1_nemsr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_y6k21")

[node name="CanLaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CanGrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStart" type="Node2D" parent="."]

[node name="Marker1" type="Marker2D" parent="LaserStart"]
position = Vector2(95, -16)

[node name="Marker2" type="Marker2D" parent="LaserStart"]
position = Vector2(96, -9)

[node name="Marker3" type="Marker2D" parent="LaserStart"]
position = Vector2(94, 1)

[node name="GrenadeStart" type="Marker2D" parent="."]
position = Vector2(96, -9)

[connection signal="timeout" from="CanLaserTimer" to="." method="_on_can_laser_timer_timeout"]
[connection signal="timeout" from="CanGrenadeTimer" to="." method="_on_can_grenade_timer_timeout"]
